[package]
name = "crimsonland-rs"
version = "0.1.0"
edition = "2021"
description = "Crimsonland port to Rust using Bevy ECS"
license = "MIT"

[dependencies]
bevy = "0.14"
bevy_kira_audio = "0.20"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.8"
# getrandom with wasm_js feature for WASM builds
getrandom = { version = "0.3", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }

[dev-dependencies]
proptest = "1.4"

[features]
default = ["bevy/dynamic_linking"]

# Enable optimizations for dependencies in debug builds for better performance
[profile.dev.package."*"]
opt-level = 3

# Optimize release builds
[profile.release]
lto = "thin"
codegen-units = 1

# Fast compile profile for development
[profile.dev]
opt-level = 1

[[bin]]
name = "crimsonland"
path = "src/main.rs"
